This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
https://github.com/mpc-hc/mpc-hc/blob/master/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


1.6.7 - not released yet
========================
+ Ticket #2987, Playlist improvements:
  - Scroll and select the first newly added item
  - Put MPC-HC on top and give the focus to the playlist after a drag-and drop
* Updated Catalan and Greek translations
* Updated Little CMS to v2.5 (git b58cb85)
! Fix a crash when VMR-7 (renderless) renderer failed to load
! Ticket #2991, Fix loading of MicroDVD subtitles
! Ticket #3001, "After Playback": Always give "Once" events a higher priority
  than "Always" events